# waterbase-rust-app

./: .env.example  Cargo.toml  Dockerfile  README.md  deploy.md  design_system.md  docker-compose.yml  docker-entrypoint.sh  exemplo.json  render.yaml
plans/: authentication_plan.md  encryption_plan.md  new.md
src/: lib.rs  main.rs
src/handlers/: api.rs  hud.rs  mod.rs
src/handlers/api/: auth.rs  db.rs  mod.rs
src/ui/: css.rs  mod.rs  templates.rs
stress_tests/: api_v1_easy_stress.js  api_v1_stress.js
