[package]
name = "waterbase-rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
maud = { version = "0.26", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "=1.52.3", features = ["sync"] }
